// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegenerateUnitData mutation tests should regenerate all the generated products for the unit with API 1`] = `
Array [
  Object {
    "allergens": Array [
      "egg",
      "gluten",
    ],
    "configSets": null,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN_unit01_have_not_been_here_before",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "CHAIN_PRODUCT",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "test_REGEN__ProductCategoryId_01",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeawayTax": 12,
    "tax": 27,
    "unitId": "test_REGEN_UNIT_ID_01",
    "variants": Array [
      Object {
        "id": "test_GroupProductVariant_id_1",
        "netPackagingFee": null,
        "pack": Object {
          "size": 1,
          "unit": "GROUP_UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_GroupProductVariant_id_2",
        "netPackagingFee": null,
        "pack": Object {
          "size": 2,
          "unit": "GROUP_UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 1.5,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 3,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  Object {
    "allergens": Array [
      "egg",
      "gluten",
    ],
    "configSets": Array [
      Object {
        "items": Array [
          Object {
            "allergens": Array [
              "egg",
              "gluten",
              "milk",
              "soya",
              "peanut",
            ],
            "name": Object {
              "de": "Room temperature",
              "en": "Room temperature",
              "hu": "Szobahőmérsékletű",
            },
            "netPackagingFee": null,
            "position": 1,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_01",
            "soldOut": null,
          },
          Object {
            "allergens": Array [],
            "name": Object {
              "de": "Straw",
              "en": "Straw",
              "hu": "Szívószál",
            },
            "netPackagingFee": null,
            "position": 2,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_02",
            "soldOut": null,
          },
        ],
        "maxSelection": 2,
        "name": Object {
          "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
          "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
          "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_01",
        },
        "position": 1,
        "productSetId": "test_REGEN_prodCompSet_01",
        "supportedServingModes": Array [
          "inPlace",
        ],
        "type": "extras",
      },
      Object {
        "items": Array [
          Object {
            "allergens": Array [
              "egg",
              "gluten",
              "milk",
              "soya",
              "peanut",
            ],
            "name": Object {
              "de": "Room temperature",
              "en": "Room temperature",
              "hu": "Szobahőmérsékletű",
            },
            "netPackagingFee": null,
            "position": 1,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_01",
            "soldOut": null,
          },
          Object {
            "allergens": Array [],
            "name": Object {
              "de": "Straw",
              "en": "Straw",
              "hu": "Szívószál",
            },
            "netPackagingFee": null,
            "position": 2,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_02",
            "soldOut": null,
          },
          Object {
            "allergens": Array [
              "mustard",
            ],
            "name": Object {
              "de": "French fries",
              "en": "French fries",
              "hu": "Hasábburgonya",
            },
            "netPackagingFee": null,
            "position": 3,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_03",
            "soldOut": null,
          },
        ],
        "maxSelection": 3,
        "name": Object {
          "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
          "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
          "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_02",
        },
        "position": 2,
        "productSetId": "test_REGEN_prodCompSet_02",
        "supportedServingModes": Array [
          "inPlace",
        ],
        "type": "modifier",
      },
    ],
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_01_01",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "CHAIN_PRODUCT",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "test_REGEN__ProductCategoryId_01",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeawayTax": 12,
    "tax": 27,
    "unitId": "test_REGEN_UNIT_ID_01",
    "variants": Array [
      Object {
        "id": "test_GroupProductVariant_id_1",
        "netPackagingFee": null,
        "pack": Object {
          "size": 1,
          "unit": "GROUP_UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_GroupProductVariant_id_2",
        "netPackagingFee": null,
        "pack": Object {
          "size": 2,
          "unit": "GROUP_UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 1.5,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 3,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  Object {
    "allergens": Array [
      "egg",
      "gluten",
    ],
    "configSets": null,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_01_02",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "CHAIN_PRODUCT",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "test_REGEN__ProductCategoryId_01",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeawayTax": 12,
    "tax": 27,
    "unitId": "test_REGEN_UNIT_ID_01",
    "variants": Array [
      Object {
        "id": "test_GroupProductVariant_id_1",
        "netPackagingFee": null,
        "pack": Object {
          "size": 1,
          "unit": "GROUP_UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_GroupProductVariant_id_2",
        "netPackagingFee": null,
        "pack": Object {
          "size": 2,
          "unit": "GROUP_UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 1.5,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 3,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  Object {
    "allergens": Array [
      "egg",
      "gluten",
      "milk",
      "soya",
      "peanut",
    ],
    "configSets": null,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": "LEIRAS",
    },
    "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_02_01",
    "image": "https://picsum.photos/100",
    "name": Object {
      "de": null,
      "en": "GENERATED_PRODUCT",
      "hu": "GENERALT_TERMEK",
    },
    "position": 1,
    "productCategoryId": "productCategoryId_",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "inPlace",
    ],
    "takeawayTax": 2,
    "tax": 1,
    "unitId": "test_REGEN_UNIT_ID_02",
    "variants": Array [
      Object {
        "id": "test_generatedProductVariant_id_pundefined_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": "VARIANT_NAME_1",
        },
      },
      Object {
        "id": "test_generatedProductVariant_id_pundefined_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": "VARIANT_NAME_2",
        },
      },
    ],
  },
]
`;

exports[`RegenerateUnitData mutation tests should regenerate all the generated products for the unit with API 2`] = `
Object {
  "allergens": Array [
    "egg",
    "gluten",
  ],
  "configSets": Array [
    Object {
      "items": Array [
        Object {
          "allergens": Array [
            "egg",
            "gluten",
            "milk",
            "soya",
            "peanut",
          ],
          "name": Object {
            "de": "Room temperature",
            "en": "Room temperature",
            "hu": "Szobahőmérsékletű",
          },
          "netPackagingFee": null,
          "position": 1,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_01",
          "soldOut": null,
        },
        Object {
          "allergens": Array [],
          "name": Object {
            "de": "Straw",
            "en": "Straw",
            "hu": "Szívószál",
          },
          "netPackagingFee": null,
          "position": 2,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_02",
          "soldOut": null,
        },
      ],
      "maxSelection": 2,
      "name": Object {
        "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
        "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
        "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_01",
      },
      "position": 1,
      "productSetId": "test_REGEN_prodCompSet_01",
      "supportedServingModes": Array [
        "inPlace",
      ],
      "type": "extras",
    },
    Object {
      "items": Array [
        Object {
          "allergens": Array [
            "egg",
            "gluten",
            "milk",
            "soya",
            "peanut",
          ],
          "name": Object {
            "de": "Room temperature",
            "en": "Room temperature",
            "hu": "Szobahőmérsékletű",
          },
          "netPackagingFee": null,
          "position": 1,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_01",
          "soldOut": null,
        },
        Object {
          "allergens": Array [],
          "name": Object {
            "de": "Straw",
            "en": "Straw",
            "hu": "Szívószál",
          },
          "netPackagingFee": null,
          "position": 2,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_02",
          "soldOut": null,
        },
        Object {
          "allergens": Array [
            "mustard",
          ],
          "name": Object {
            "de": "French fries",
            "en": "French fries",
            "hu": "Hasábburgonya",
          },
          "netPackagingFee": null,
          "position": 3,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_03",
          "soldOut": null,
        },
      ],
      "maxSelection": 3,
      "name": Object {
        "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
        "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
        "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_02",
      },
      "position": 2,
      "productSetId": "test_REGEN_prodCompSet_02",
      "supportedServingModes": Array [
        "inPlace",
      ],
      "type": "modifier",
    },
  ],
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "DESCRIPTION",
    "hu": null,
  },
  "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_01_01",
  "image": "IMAGE",
  "name": Object {
    "de": null,
    "en": "CHAIN_PRODUCT",
    "hu": null,
  },
  "position": 1,
  "productCategoryId": "test_REGEN__ProductCategoryId_01",
  "productType": "PRODUCT_TYPE",
  "supportedServingModes": Array [
    "takeAway",
  ],
  "takeawayTax": 12,
  "tax": 27,
  "unitId": "test_REGEN_UNIT_ID_01",
  "updatedAt": Any<String>,
  "variants": Array [
    Object {
      "id": "test_GroupProductVariant_id_1",
      "netPackagingFee": null,
      "pack": Object {
        "size": 1,
        "unit": "GROUP_UNIT",
      },
      "position": 1,
      "price": 1,
      "soldOut": null,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "id": "test_GroupProductVariant_id_2",
      "netPackagingFee": null,
      "pack": Object {
        "size": 2,
        "unit": "GROUP_UNIT",
      },
      "position": 2,
      "price": 2,
      "soldOut": null,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
    Object {
      "id": "test_UnitProductVariant_id_1",
      "netPackagingFee": 1,
      "pack": Object {
        "size": 1,
        "unit": "UNIT_UNIT",
      },
      "position": 1,
      "price": 1.5,
      "soldOut": true,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "id": "test_UnitProductVariant_id_2",
      "netPackagingFee": 1,
      "pack": Object {
        "size": 2,
        "unit": "UNIT_UNIT",
      },
      "position": 2,
      "price": 3,
      "soldOut": true,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
  ],
}
`;

exports[`RegenerateUnitData mutation tests should regenerate all the generated products for the unit with API: A Generated ProductCategory 1`] = `
Object {
  "createdAt": Any<String>,
  "id": "test_REGEN_UNIT_ID_01__test_REGEN__ProductCategoryId_01",
  "productCategory": Object {
    "chainId": "seeded_chain_1_id",
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN__ProductCategoryId_01",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "PRODUCT_CATEGORY",
      "hu": null,
    },
    "position": 0,
    "updatedAt": Any<String>,
  },
  "productCategoryId": "test_REGEN__ProductCategoryId_01",
  "productNum": 3,
  "unitId": "test_REGEN_UNIT_ID_01",
  "updatedAt": Any<String>,
}
`;

exports[`RegenerateUnitData mutation tests should regenerate all the generated products for the unit with direct resolver 1`] = `
Array [
  Object {
    "allergens": Array [
      "egg",
      "gluten",
    ],
    "configSets": null,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN_unit01_have_not_been_here_before",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "CHAIN_PRODUCT",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "test_REGEN__ProductCategoryId_01",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeawayTax": 12,
    "tax": 27,
    "unitId": "test_REGEN_UNIT_ID_01",
    "variants": Array [
      Object {
        "id": "test_GroupProductVariant_id_1",
        "netPackagingFee": null,
        "pack": Object {
          "size": 1,
          "unit": "GROUP_UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_GroupProductVariant_id_2",
        "netPackagingFee": null,
        "pack": Object {
          "size": 2,
          "unit": "GROUP_UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 1.5,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 3,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  Object {
    "allergens": Array [
      "egg",
      "gluten",
    ],
    "configSets": Array [
      Object {
        "items": Array [
          Object {
            "allergens": Array [
              "egg",
              "gluten",
              "milk",
              "soya",
              "peanut",
            ],
            "name": Object {
              "de": "Room temperature",
              "en": "Room temperature",
              "hu": "Szobahőmérsékletű",
            },
            "netPackagingFee": null,
            "position": 1,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_01",
            "soldOut": null,
          },
          Object {
            "allergens": Array [],
            "name": Object {
              "de": "Straw",
              "en": "Straw",
              "hu": "Szívószál",
            },
            "netPackagingFee": null,
            "position": 2,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_02",
            "soldOut": null,
          },
        ],
        "maxSelection": 2,
        "name": Object {
          "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
          "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
          "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_01",
        },
        "position": 1,
        "productSetId": "test_REGEN_prodCompSet_01",
        "supportedServingModes": Array [
          "inPlace",
        ],
        "type": "extras",
      },
      Object {
        "items": Array [
          Object {
            "allergens": Array [
              "egg",
              "gluten",
              "milk",
              "soya",
              "peanut",
            ],
            "name": Object {
              "de": "Room temperature",
              "en": "Room temperature",
              "hu": "Szobahőmérsékletű",
            },
            "netPackagingFee": null,
            "position": 1,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_01",
            "soldOut": null,
          },
          Object {
            "allergens": Array [],
            "name": Object {
              "de": "Straw",
              "en": "Straw",
              "hu": "Szívószál",
            },
            "netPackagingFee": null,
            "position": 2,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_02",
            "soldOut": null,
          },
          Object {
            "allergens": Array [
              "mustard",
            ],
            "name": Object {
              "de": "French fries",
              "en": "French fries",
              "hu": "Hasábburgonya",
            },
            "netPackagingFee": null,
            "position": 3,
            "price": 0,
            "productComponentId": "test_REGEN_prodComp_03",
            "soldOut": null,
          },
        ],
        "maxSelection": 3,
        "name": Object {
          "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
          "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
          "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_02",
        },
        "position": 2,
        "productSetId": "test_REGEN_prodCompSet_02",
        "supportedServingModes": Array [
          "inPlace",
        ],
        "type": "modifier",
      },
    ],
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_01_01",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "CHAIN_PRODUCT",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "test_REGEN__ProductCategoryId_01",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeawayTax": 12,
    "tax": 27,
    "unitId": "test_REGEN_UNIT_ID_01",
    "variants": Array [
      Object {
        "id": "test_GroupProductVariant_id_1",
        "netPackagingFee": null,
        "pack": Object {
          "size": 1,
          "unit": "GROUP_UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_GroupProductVariant_id_2",
        "netPackagingFee": null,
        "pack": Object {
          "size": 2,
          "unit": "GROUP_UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 1.5,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 3,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  Object {
    "allergens": Array [
      "egg",
      "gluten",
    ],
    "configSets": null,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_01_02",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "CHAIN_PRODUCT",
      "hu": null,
    },
    "position": 1,
    "productCategoryId": "test_REGEN__ProductCategoryId_01",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "takeAway",
    ],
    "takeawayTax": 12,
    "tax": 27,
    "unitId": "test_REGEN_UNIT_ID_01",
    "variants": Array [
      Object {
        "id": "test_GroupProductVariant_id_1",
        "netPackagingFee": null,
        "pack": Object {
          "size": 1,
          "unit": "GROUP_UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_GroupProductVariant_id_2",
        "netPackagingFee": null,
        "pack": Object {
          "size": 2,
          "unit": "GROUP_UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT_UNIT",
        },
        "position": 1,
        "price": 1.5,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": null,
        },
      },
      Object {
        "id": "test_UnitProductVariant_id_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT_UNIT",
        },
        "position": 2,
        "price": 3,
        "soldOut": true,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": null,
        },
      },
    ],
  },
  Object {
    "allergens": Array [
      "egg",
      "gluten",
      "milk",
      "soya",
      "peanut",
    ],
    "configSets": null,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": "LEIRAS",
    },
    "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_02_01",
    "image": "https://picsum.photos/100",
    "name": Object {
      "de": null,
      "en": "GENERATED_PRODUCT",
      "hu": "GENERALT_TERMEK",
    },
    "position": 1,
    "productCategoryId": "productCategoryId_",
    "productType": "PRODUCT_TYPE",
    "supportedServingModes": Array [
      "inPlace",
    ],
    "takeawayTax": 2,
    "tax": 1,
    "unitId": "test_REGEN_UNIT_ID_02",
    "variants": Array [
      Object {
        "id": "test_generatedProductVariant_id_pundefined_1",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 1,
          "unit": "UNIT",
        },
        "position": 1,
        "price": 1,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_1",
          "hu": "VARIANT_NAME_1",
        },
      },
      Object {
        "id": "test_generatedProductVariant_id_pundefined_2",
        "netPackagingFee": 1,
        "pack": Object {
          "size": 2,
          "unit": "UNIT",
        },
        "position": 2,
        "price": 2,
        "soldOut": null,
        "variantName": Object {
          "de": null,
          "en": "VARIANT_NAME_2",
          "hu": "VARIANT_NAME_2",
        },
      },
    ],
  },
]
`;

exports[`RegenerateUnitData mutation tests should regenerate all the generated products for the unit with direct resolver 2`] = `
Object {
  "allergens": Array [
    "egg",
    "gluten",
  ],
  "configSets": Array [
    Object {
      "items": Array [
        Object {
          "allergens": Array [
            "egg",
            "gluten",
            "milk",
            "soya",
            "peanut",
          ],
          "name": Object {
            "de": "Room temperature",
            "en": "Room temperature",
            "hu": "Szobahőmérsékletű",
          },
          "netPackagingFee": null,
          "position": 1,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_01",
          "soldOut": null,
        },
        Object {
          "allergens": Array [],
          "name": Object {
            "de": "Straw",
            "en": "Straw",
            "hu": "Szívószál",
          },
          "netPackagingFee": null,
          "position": 2,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_02",
          "soldOut": null,
        },
      ],
      "maxSelection": 2,
      "name": Object {
        "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
        "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_01",
        "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_01",
      },
      "position": 1,
      "productSetId": "test_REGEN_prodCompSet_01",
      "supportedServingModes": Array [
        "inPlace",
      ],
      "type": "extras",
    },
    Object {
      "items": Array [
        Object {
          "allergens": Array [
            "egg",
            "gluten",
            "milk",
            "soya",
            "peanut",
          ],
          "name": Object {
            "de": "Room temperature",
            "en": "Room temperature",
            "hu": "Szobahőmérsékletű",
          },
          "netPackagingFee": null,
          "position": 1,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_01",
          "soldOut": null,
        },
        Object {
          "allergens": Array [],
          "name": Object {
            "de": "Straw",
            "en": "Straw",
            "hu": "Szívószál",
          },
          "netPackagingFee": null,
          "position": 2,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_02",
          "soldOut": null,
        },
        Object {
          "allergens": Array [
            "mustard",
          ],
          "name": Object {
            "de": "French fries",
            "en": "French fries",
            "hu": "Hasábburgonya",
          },
          "netPackagingFee": null,
          "position": 3,
          "price": 0,
          "productComponentId": "test_REGEN_prodComp_03",
          "soldOut": null,
        },
      ],
      "maxSelection": 3,
      "name": Object {
        "de": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
        "en": "PRODUCT_COMPONENT_SET_test_REGEN_prodCompSet_02",
        "hu": "KOMPONENS_SET_test_REGEN_prodCompSet_02",
      },
      "position": 2,
      "productSetId": "test_REGEN_prodCompSet_02",
      "supportedServingModes": Array [
        "inPlace",
      ],
      "type": "modifier",
    },
  ],
  "createdAt": Any<String>,
  "description": Object {
    "de": null,
    "en": "DESCRIPTION",
    "hu": null,
  },
  "id": "test_REGEN_unitProduct_utest_REGEN_UNIT_ID_01_01",
  "image": "IMAGE",
  "name": Object {
    "de": null,
    "en": "CHAIN_PRODUCT",
    "hu": null,
  },
  "position": 1,
  "productCategoryId": "test_REGEN__ProductCategoryId_01",
  "productType": "PRODUCT_TYPE",
  "supportedServingModes": Array [
    "takeAway",
  ],
  "takeawayTax": 12,
  "tax": 27,
  "unitId": "test_REGEN_UNIT_ID_01",
  "updatedAt": Any<String>,
  "variants": Array [
    Object {
      "id": "test_GroupProductVariant_id_1",
      "netPackagingFee": null,
      "pack": Object {
        "size": 1,
        "unit": "GROUP_UNIT",
      },
      "position": 1,
      "price": 1,
      "soldOut": null,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "id": "test_GroupProductVariant_id_2",
      "netPackagingFee": null,
      "pack": Object {
        "size": 2,
        "unit": "GROUP_UNIT",
      },
      "position": 2,
      "price": 2,
      "soldOut": null,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
    Object {
      "id": "test_UnitProductVariant_id_1",
      "netPackagingFee": 1,
      "pack": Object {
        "size": 1,
        "unit": "UNIT_UNIT",
      },
      "position": 1,
      "price": 1.5,
      "soldOut": true,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "id": "test_UnitProductVariant_id_2",
      "netPackagingFee": 1,
      "pack": Object {
        "size": 2,
        "unit": "UNIT_UNIT",
      },
      "position": 2,
      "price": 3,
      "soldOut": true,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
  ],
}
`;

exports[`RegenerateUnitData mutation tests should regenerate all the generated products for the unit with direct resolver: A Generated ProductCategory 1`] = `
Object {
  "createdAt": Any<String>,
  "id": "test_REGEN_UNIT_ID_01__test_REGEN__ProductCategoryId_01",
  "productCategory": Object {
    "chainId": "seeded_chain_1_id",
    "createdAt": Any<String>,
    "description": Object {
      "de": null,
      "en": "DESCRIPTION",
      "hu": null,
    },
    "id": "test_REGEN__ProductCategoryId_01",
    "image": "IMAGE",
    "name": Object {
      "de": null,
      "en": "PRODUCT_CATEGORY",
      "hu": null,
    },
    "position": 0,
    "updatedAt": Any<String>,
  },
  "productCategoryId": "test_REGEN__ProductCategoryId_01",
  "productNum": 3,
  "unitId": "test_REGEN_UNIT_ID_01",
  "updatedAt": Any<String>,
}
`;

exports[`RegenerateUnitData mutation tests should return helpful error message in case the unit has no items 1`] = `"{\\"message\\":\\"There is no product in this unit\\",\\"code\\":\\"ERROR_NO_PRODUCT_IN_UNIT\\"}"`;
